workspace/.metadata/.plugins/org.eclipse.cdt.ui/RobotCodeMain.build.log
20:22:13 **** Incremental Build of configuration Debug for project RobotCodeMain ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800404/wpilib/cpp/current/include" "-IC:\\Users\\1750800404\\Robotics\\C++\\workspace_C++\\RobotCodeMain\\src" -O0 -g3 -Wall -c -fmessage-length=0 -std=c++14 -o "src\\Auto.o" "..\\src\\Auto.cpp" 
..\src\Auto.cpp: In constructor 'Auto::Auto(int, int)':
..\src\Auto.cpp:18:7: error: invalid conversion from 'int' to 'Auto::AutonMode' [-fpermissive]
  mode = mode_;
       ^
..\src\Auto.cpp:19:6: error: invalid conversion from 'int' to 'Auto::AutonPos' [-fpermissive]
  pos = pos_;
      ^

20:22:14 Build Finished (took 1s.57ms)

